# bank-churn-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
finance_churn_project/: __init__.py  dataset.py  features.py  inference_pipeline.py  training_pipeline.py
finance_churn_project/inference/: predict.py
finance_churn_project/modeling/: predict.py  train.py
finance_churn_project/processing/: data_loader.py
finance_churn_project/utils/: general_utils.py
notebooks/: 1.0_lc_exploratory_data_analysis.ipynb  2.0_lc_data_processing_model_selection.ipynb  3.0_lc_feature_engineering_and_selection.ipynb  4.0_lc_training_hyperparameter_tuning.ipynb  4.5_final_processing.ipynb  5.0_lc_inference.ipynb
src/: plots.py
src/inference/: predict.py
src/processing/: data_processing.py
src/utils/: general_utils.py
tests/: conftest.py  test_processing.py
